trunk/Archive2/e7/06a5be759ce70a/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:28:33: error: expected '(' for function-style cast or type construction
  auto my_a = my_a_generator<int>(); 
                             ~~~^
main.cpp:28:35: error: expected expression
  auto my_a = my_a_generator<int>(); 
                                  ^
2 errors generated.
